--- a/index.html
+++ b/index.html
@@ -13,12 +13,20 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <!-- 스킵 네비게이션 -->
+  <div id="skip">
+    <a href="#cont_nav">전체 메뉴 바로가기</a>
+    <a href="#cont_ban">배너 영역 바로가기</a>
+    <a href="#cont_cont">컨텐츠 영역 바로가기</a>
+  </div>
+  <!-- //스킵 네비게이션 -->
+
   <div id="wrap">
     <div id="header">
       <div class="container"></div>
     </div>
     <!-- header -->
-
+    
     <div id="contents">
       <div id="cont_nav">
         <div class="container">cont_nav</div>
@@ -38,7 +46,7 @@
       <!-- cont_cont -->
     </div>
     <!-- contents -->
-    
+
     <div id="footer">
       <div class="container">footer</div>
     </div>
