--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <!-- CSS Style -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+
+  <!-- 웹 폰트 -->
+  <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- 스킵 네비게이션 -->
@@ -23,7 +26,28 @@
 
   <div id="wrap">
     <div id="header">
-      <div class="container"></div>
+      <div class="container">
+        <div class="header">
+          <div class="header-menu">
+            <a href="https://www.google.com" target="_blank">Designer</a>
+            <a href="https://www.twitter.com" target="_blank">Publisher</a>
+            <a href="https://www.youtube.com" target="_blank">Youtube</a>
+          </div>
+          <!-- 헤더 메뉴 -->
+          <div class="header-tit">
+            <h1>Professional Publisher &amp; Designer</h1><br>
+            <a href="https://blogbugmaker.tistory.com/" target="_blank">blogbugmaker.tistory.com</a>
+          </div>
+          <!-- 헤더 타이틀 -->
+          <div class="header-icon">
+            <a href="#" class="icon1"><span class="ir_pm">icon1</span></a>
+            <a href="#" class="icon2"><span class="ir_pm">icon2</span></a>
+            <a href="#" class="icon3"><span class="ir_pm">icon3</span></a>
+            <a href="#" class="icon4"><span class="ir_pm">icon4</span></a>
+          </div>
+          <!-- 헤더 아이콘 -->
+        </div>
+      </div>
     </div>
     <!-- header -->
     
